objects/Case_Owner_History__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Owner Histories</relationshipLabel>
        <relationshipName>Case_Owner_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Elapsed_Time_Hours__c</fullName>
        <formula>if(
isblank(Exit_Time__c)
,(((Now()- Entry_Time__c)*1440 )/60)
,(((Exit_Time__c - Entry_Time__c)*1440 )/60)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Time_Total_Minutes__c</fullName>
        <formula>if(
isblank(Exit_Time__c)
,((Now()- Entry_Time__c)*1440 )
,((Exit_Time__c - Entry_Time__c)*1440 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time (Total Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entry_Time__c</fullName>
        <label>Entry Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exit_Time__c</fullName>
        <label>Exit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>If(
BEGINS(OwnerId, &quot;005&quot;)
,Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName
,Owner:Queue.QueueName
)</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Case Owner History</label>
    <listViews>
        <fullName>Admin_Team_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Admin Team</label>
        <queue>Admin_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Billing_Escalation_Queue_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Billing Escalation Queue</label>
        <queue>Billing_Escalation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Billing_Queue_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Billing Queue</label>
        <queue>Billing_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEO_Escalations_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>CEO Escalations</label>
        <queue>CEO_Escalations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Call_Escalation_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Call Escalation</label>
        <queue>Call_Escalation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancellation_Escalation_Queue_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Cancellation Escalation Queue</label>
        <queue>Cancellation_Escalation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Admin_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Central Admin</label>
        <queue>Central_Admin</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Admin_Escalation_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Central Admin Escalation</label>
        <queue>Central_Admin_Escalation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Collections_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Collections</label>
        <queue>Collections</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Collections_Escalation_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Do Not Use Yet - Collections Escalation</label>
        <queue>Collections_Escalation</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commercial_Escalation_Queue_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Commercial Escalation Queue</label>
        <queue>Commercial_Escalation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commercial_Queue_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Commercial Queue</label>
        <queue>Commercial_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commercial_Tech_Support_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Commercial - Tech Support</label>
        <queue>Commercial_Tech_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Commercial_Tech_Support_Escalation_Q_Case_Owner_History</fullName>
        <filterScope>Queue</filterScope>
        <label>Commercial - Tech Support Escalation Q</label>
        <queue>Commercial_Tech_Support_Escalation_Q</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>COH-{000000}</displayFormat>
        <label>Case Owner History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Owner Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>